--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,102 +1,30 @@
-<html>
+{% load static %}
+{% load widget_tweaks %}
+<html class="h-full ">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
-    <script>
-        tailwind.config = {
-          theme: {
-            screens: {
-                sm: '480px',
-                md: '768px',
-                lg: '976px',
-                xl: '1440px',
-              },
-
-              colors: {
-                'halloween': '#F7EEDD',
-                'halloweengray': '#ede4d3',
-                'halloweenorange': '#FF7F50',
-                'halloweenred': '#8f1e00',
-                'black': '#000000',
-                'halloweenblackgrey': '#2c2c2c',
-                'orange': '#ff7849',
-                'green': '#13ce66',
-                'yellow': '#ffc82c',
-                'gray-dark': '#273444',
-                'gray-light': '#d3dce6',
-              },  
-          }
-        }
-      </script>
+    <!-- Main Quill library -->
+    <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script> 
+    <!-- Theme included stylesheets -->  
+    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet"> 
+  
 </head>
-<body class="bg-halloween flex min-h-full">
-<div class="w-full">
-    <header class="bg-slate-50 lg:fixed lg:inset-y-0 lg:left-0 lg:flex lg:w-112 lg:items-start lg:overflow-y-auto xl:w-120">
-    <div class="hidden lg:sticky lg:top-0 lg:flex lg:w-16 lg:flex-none lg:items-center lg:whitespace-nowrap lg:py-12 lg:text-sm lg:leading-7 lg:[writing-mode:vertical-rl]" >
-        <span class="font-mono text-slate-500">E-Notes</span>
-        <span class="mt-6 flex gap-6 font-bold text-slate-900">{{user}}<span aria-hidden="true" class="text-slate-400">/</span>Workspace</span>
-        <span class="mt-6 font-bold text-slate-900"><button><i class="fa-solid fa-lg fa-gear text-halloweenorange"></i></button></span>
-    </div>
-    <div class="relative z-10 mx-auto px-4 pb-4 pt-10 sm:px-6 md:max-w-2xl md:px-4 lg:min-h-full lg:flex-auto lg:border-x lg:border-slate-200 lg:px-8 lg:py-12 xl:px-12">
-        <div class="mt-10 text-center lg:mt-12 lg:text-left">
-            <h1 class="text-3xl text-black font-bold mb-10">
-                Notes
-            </h1> 
-            {% for list in listnotes %}
-            <div class="relative w-full rounded-xl bg-halloweenorange shadow-[0px_0px_0px_1px_rgba(9,9,11,0.07),0px_2px_2px_0px_rgba(9,9,11,0.05)] dark:bg-zinc-900 dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)] dark:before:pointer-events-none dark:before:absolute dark:before:-inset-px dark:before:rounded-xl dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset] forced-colors:outline ">
-                <div class="grid grid-cols-1 w-full justify-items-left overflow-hidden place-items-left lg:pl-10 lg:pr-10 lg:pb-5 lg:pt-5 lg:mb-8">
-                    <div class="col-span-1">
-                        <p class="d-none">{{list.id}}</p>
-                        <p class="mt-3 text-lg  text-halloweenred font-bold leading-8 text-slate-700">{{list.title}}</p> 
-                    </div>
-                    <div  class="col-span-1">
-                        <p class="mt-1 text-sm text-halloweenred  leading-8 ">{{list.content|slice:":50"}}...</p> 
-                    </div>
-                    <div  class="col-span-1">
-                        <p class="mt-1 text-sm text-halloweenred leading-8 ">{{list.updated_at|date:"j M Y"}}</p> 
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-</header>
+<body>
+{% for list in listnotes%}
+<div class="card">
+{{list.title}}
+{{list.content}}
+{{list.created_at}}
+{{list.updated_at}}
 </div>
-<main class="border-t border-slate-200 lg:relative lg:mb-28 lg:ml-112 lg:border-t-0 xl:ml-120">
-<div class="relative ">
-    <div class="pb-12 pt-16 sm:pb-4 lg:pt-12">
-        <div class="lg:px-8">
-            <div class="lg:max-w-4xl" >
-                <div class="mx-auto px-4 sm:px-6 md:max-w-2xl md:px-4 lg:px-0">
-                    <h1 class="text-2xl font-bold leading-7 text-slate-900">Episodes</h1>
-                </div>
-            </div>
-        </div>
-        <div class="divide-y divide-slate-100 sm:mt-4 lg:mt-8 lg:border-t lg:border-slate-100">
-            {% for list in listnotes %}
-            <article aria-labelledby="episode-5-title" class="py-10 sm:py-12"><div class="lg:px-8" >
-                <div class="lg:max-w-4xl" >
-                    <div class="mx-auto px-4 sm:px-6 md:max-w-2xl md:px-4 lg:px-0">
-                        <div class="flex flex-col items-start" >
-                            <h2 id="episode-5-title" class="mt-2 text-lg font-bold text-slate-900">
-                                <a href="/5">{{list.title}}</a>
-                            </h2>
-                            <time datetime="2022-02-24T00:00:00.000Z" class="order-first font-mono text-sm leading-7 text-slate-500">{{list.updated_at|date:"M, j Y"}}</time>
-                            <p class="mt-1 text-base leading-7 text-slate-700">{{list.content|truncatewords:15}}</p>
-                            <div class="mt-4 flex items-center gap-4" >
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            {% endfor %}
-        </div>
-    </div>
-</div>
-</main>
-</body>    
+{% endfor %}
+{% block content %}
+{% endblock%}
+</body>
 </html>
