updating templates, add function, add animations

--- a/app/templates/note/note_edit.html
+++ b/app/templates/note/note_edit.html
@@ -1,35 +1,67 @@
-{% extends 'index.html' %}
-
+{% extends 'base.html' %}
+{% load static %}
+{% load widget_tweaks %}
+{% block extra_css %}
+<style>
+  .ql-container.ql-snow{
+    border:0px;
+  }
+</style>
+{% endblock %}
 {% block content %}
-  <h2>Edit Note</h2>
+<div class="section overflow-auto">
+  <div class="row">
+    <a href="{% url 'note_list'%}">
+    <div class="col-12" id="back" style="display: flex;flex-direction: row;flex-wrap: nowrap;align-content: center;justify-content: flex-start;align-items: center;">
+      <lord-icon
+    src="https://cdn.lordicon.com/vduvxizq.json"
+    trigger="loop-on-hover"
+    target="#back"
+    style="width:25px;height:25px; transform:rotate(180deg);margin-top: 15px;" >
+  </lord-icon>
+  <h2 style="margin-top: 20px; margin-bottom: 10px;">
+ {{note.workspace|title}}</h2>
+  </div></a>
+  </div>
   <form id="noteForm" method="post" action="">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% render_field form.title class="form-control" style="font-weight: bold; font-size: 18px; border-color: white;" %}
+    <div id="quill-editor">{{ form.content }}</div>
+    <input type="hidden" name="content" id="quill-content-field">
+
+    workspace:{% render_field form.workspace class="form-control" %}
+    trashed:{% render_field form.trashed  %}
     <input type="submit" value="Save">
   </form>
-
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script>
-    {% comment %} $(document).ready(function () {
-      // Automatically save note when content changes
-      $('#id_content').on('input', function () {
-        autoSave();
-      });
-
-      function autoSave() {
-        // Set the note ID in the form before sending
-        $('#id').val('{{ note.id }}');
-        
-        $.ajax({
-          url: '',
-          type: 'post',
-          data: $('#noteForm').serialize(),
-          success: function (data) {
-            // Optional: You can provide user feedback here if needed
-            console.log('Note automatically saved!');
-          },
-        });
+</div>
+{% endblock %}
+{% block extra_js %}
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    var quill = new Quill('#quill-editor', {
+      theme: 'snow',
+      modules: {
+        toolbar: [
+          ['bold', 'italic', 'underline', 'strike'],        
+          ['blockquote', 'code-block'],
+          [{ 'header': 1 }, { 'header': 2 }],
+          [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+          [{ 'script': 'sub' }, { 'script': 'super' }],
+          [{ 'indent': '-1' }, { 'indent': '+1' }],
+          [{ 'direction': 'rtl' }],
+          [{ 'size': ['small', false, 'large', 'huge'] }],
+          [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
+          [{ 'color': [] }, { 'background': [] }],
+          [{ 'font': [] }],
+          [{ 'align': [] }],
+          ['clean']
+        ]
       }
-    }); {% endcomment %}
-  </script>
+    });
+    quill.root.innerHTML = "{{ form.content.value }}";
+    document.getElementById('noteForm').addEventListener('submit', function() {
+      document.getElementById('quill-content-field').value = quill.root.innerHTML;
+    });
+  });
+</script>
 {% endblock %}
