--- a/app/templates/note/note_edit.html
+++ b/app/templates/note/note_edit.html
@@ -5,13 +5,17 @@
 <style>
   .ql-container.ql-snow{
     border:0px;
+    
+  }
+  .ql-toolbar.ql-snow{
+    border-radius: 15px;
   }
 </style>
 {% endblock %}
-{% block content %}
-<div class="section overflow-auto">
+{% block content2 %}
+<div class="container overflow-auto" style="width: 1000px;">
   <div class="row">
-    <a href="{% url 'note_list'%}">
+    <a href="/list/{{note.workspace.id}}/">
     <div class="col-12" id="back" style="display: flex;flex-direction: row;flex-wrap: nowrap;align-content: center;justify-content: flex-start;align-items: center;">
       <lord-icon
     src="https://cdn.lordicon.com/vduvxizq.json"
@@ -23,15 +27,27 @@
  {{note.workspace|title}}</h2>
   </div></a>
   </div>
-  <form id="noteForm" method="post" action="">
-    {% csrf_token %}
-    {% render_field form.title class="form-control" style="font-weight: bold; font-size: 18px; border-color: white;" %}
+  <hr>
+  <form id="noteForm" method="post" action="#">
+    
+    {% render_field form.title class="form-control" style="font-weight: bold;font-size: 18px;margin-top: 30px;margin-bottom: 30px;     border: transparent;" %}
+    <div class="row" style="gap: 10px;font-size: 10px;">
+      <div class="col-12"><p>Created By</p>{{users.username}}</div>
+      <div class="col-12" style="
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      align-content: center;
+      justify-content: space-between;
+      align-items: center;
+  "><p>Last Modified:</p><p>{{lastupdate}}<p></div>
+    </div>
     <div id="quill-editor">{{ form.content }}</div>
     <input type="hidden" name="content" id="quill-content-field">
 
-    workspace:{% render_field form.workspace class="form-control" %}
+    {% render_field form.workspace class="form-control d-none" %}
     trashed:{% render_field form.trashed  %}
-    <input type="submit" value="Save">
+   
   </form>
 </div>
 {% endblock %}
@@ -59,9 +75,37 @@
       }
     });
     quill.root.innerHTML = "{{ form.content.value }}";
-    document.getElementById('noteForm').addEventListener('submit', function() {
-      document.getElementById('quill-content-field').value = quill.root.innerHTML;
+    quill.on('text-change', function(delta, oldDelta, source) {
+      autosave();
+  });
+ 
+  $(document).ready(function() {
+    
+    $('#noteForm input, #noteForm textarea').on('input', function() {
+      autosave();
     });
   });
+  function autosave() {
+  
+    var formData = $('#noteForm').serialize();
+    formData += '&content=' + encodeURIComponent(quill.root.innerHTML);
+
+    $.ajax({
+      type: 'PUT',
+      url: '/api/v2/notes/{{note.id}}/',
+      data: formData,
+      headers: {
+        "X-CSRFToken": "{{csrf_token }}"
+      },
+      success: function(response) {
+        console.log('Autosave successful');
+      },
+      error: function(error) {
+        console.error('Autosave failed', error);
+      }
+    });
+  }
+});
+
 </script>
 {% endblock %}
