--- a/app/templates/note/note_null.html
+++ b/app/templates/note/note_null.html
@@ -24,7 +24,7 @@
       
 </style>
 {% endblock%}
-<div class="container overflow-auto" id="thisnull" style="width: 1000px;padding: 20px;display: flex;flex-direction: column;flex-wrap: nowrap;align-content: center;align-items: center;justify-content: flex-start; overflow: hidden;">
+<div class="container overflow-auto" id="thisnull" style="width: 1400px;padding: 20px;display: flex;flex-direction: column;flex-wrap: nowrap;align-content: center;align-items: center;justify-content: flex-start; overflow: hidden;">
 <div class="row">
   <a >
   <div class="col-12" id="back" style="display: flex;flex-direction: row;flex-wrap: nowrap;align-content: center;justify-content: center;align-items: center;">
@@ -36,7 +36,7 @@
   style="width:25px;height:25px;margin-top: 15px;" >
 </lord-icon>
 <h4 id="reveal-text1" style="margin-top: 20px; margin-bottom: 10px; opacity:1;">
- Create New Note Now</h4>
+ Create New Notes Now</h4>
 </div></a>
 </div>
 <div class="tilt-container" id="tiltContainer">
