--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,12 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <link rel="icon" type="image/x-icon" href="{% static 'icon/favicon.ico' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/kursor@0.1.6/dist/kursor.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Main Quill library -->
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <title>E Notes</title>
+    <title>Notes</title>
    
     {% block extra_css %}
     {% endblock %}
@@ -210,6 +211,8 @@
         {% include "note/note_null.html" %}
       {% elif '/list/' in request.path %}
       {% include "note/note_null.html" %}
+      {% elif '/add/' in request.path %}
+      {% include "note/note_add.html" %}
       {% elif '/trashlist/' in request.path %}
       {% include "note/note_null.html" %}
       {% else %}
@@ -295,11 +298,11 @@ window.addEventListener("load", function(){
    </script> 
    
     <script>
-        var kursorx = new kursor({
+        {% comment %} var kursorx = new kursor({
             type: 4,
             removeDefaultCursor: true,
             
-        })
+        }) {% endcomment %}
         document.addEventListener('selectstart', function (e) {
           var isQuillEditor = e.target.closest('#quill-editor');
 
